[gd_scene load_steps=9 format=2]

[ext_resource path="res://minigames/recycle/assets/desktopper.png" type="Texture" id=1]
[ext_resource path="res://minigames/recycle/scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://minigames/recycle/scripts/Bin_Body.gd" type="Script" id=3]
[ext_resource path="res://minigames/recycle/assets/icons/Volume-1.png" type="Texture" id=4]
[ext_resource path="res://minigames/recycle/scenes/File_Node.tscn" type="PackedScene" id=5]
[ext_resource path="res://minigames/recycle/assets/icons/Empty Recycle Bin-1.png" type="Texture" id=6]
[ext_resource path="res://minigames/recycle/assets/BSoS.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 32 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 47.0 ]
}
File = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 240 )
scale = Vector2( 0.42328, 0.42328 )
texture = ExtResource( 1 )

[node name="Start" type="Label" parent="Sprite"]
margin_left = -711.0
margin_top = 510.0
margin_right = -588.0
margin_bottom = 553.0
text = "_start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Sprite"]
margin_left = 565.0
margin_top = 508.0
margin_right = 745.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "10:10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="Button" parent="Sprite"]
margin_left = 501.0
margin_top = 506.0
margin_right = 553.0
margin_bottom = 558.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Computer" type="Label" parent="Sprite"]
margin_left = -695.0
margin_top = -444.0
margin_right = -595.0
margin_bottom = -423.0
rect_pivot_offset = Vector2( 50.0376, 160.5 )
text = "_my-computer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Network" type="Label" parent="Sprite"]
margin_left = -695.0
margin_top = -292.8
margin_right = -595.0
margin_bottom = -271.8
rect_pivot_offset = Vector2( 50.0376, 160.5 )
text = "_network"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="E-mail" type="Label" parent="Sprite"]
margin_left = -695.0
margin_top = -148.688
margin_right = -595.0
margin_bottom = -127.688
rect_pivot_offset = Vector2( 50.0376, 160.5 )
text = "_e-mail"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Internet" type="Label" parent="Sprite"]
margin_left = -695.0
margin_top = 4.87457
margin_right = -595.0
margin_bottom = 25.8746
rect_pivot_offset = Vector2( 50.0376, 160.5 )
text = "_internet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSN" type="Label" parent="Sprite"]
margin_left = -695.0
margin_top = 151.349
margin_right = -595.0
margin_bottom = 172.349
rect_pivot_offset = Vector2( 50.0376, 160.5 )
text = "MS Network"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File_Node" parent="." instance=ExtResource( 5 )]
visible = false
z_index = 1

[node name="Score" type="Label" parent="."]
margin_left = 579.0
margin_top = 339.0
margin_right = 621.0
margin_bottom = 360.0
text = "0/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bin_Area" type="Area2D" parent="."]
position = Vector2( 600, 390 )
collision_mask = 0
monitorable = false
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="Bin_Area"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Bin_Icon" type="Sprite" parent="Bin_Area"]
position = Vector2( 7.15256e-07, -7.15256e-07 )
scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Bin_Area"]
margin_left = -23.0
margin_top = 26.0
margin_right = 23.0
margin_bottom = 40.0
text = "_bin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Node2D" parent="."]

[node name="Hint-Label" type="Label" parent="Hint"]
margin_left = 800.0
margin_top = 400.0
margin_right = 1150.0
margin_bottom = 440.0
text = "_recycle-hint"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint-Animation" type="Tween" parent="Hint"]

[node name="You_Won" type="Node2D" parent="."]
z_index = 3

[node name="BSoS" type="Sprite" parent="You_Won"]
position = Vector2( 321, -241 )
texture = ExtResource( 7 )

[node name="BSoS-Animation" type="Tween" parent="You_Won"]

[node name="Play_Again" type="Button" parent="You_Won"]
margin_left = 113.0
margin_top = -215.0
margin_right = 228.0
margin_bottom = -98.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="You_Won"]
margin_left = 113.0
margin_top = -98.0
margin_right = 228.0
margin_bottom = -77.0
text = "_scan"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="won" from="." to="." method="_on_Main_won"]
[connection signal="pressed" from="Sprite/Mute" to="." method="_on_Mute_pressed"]
[connection signal="body_entered" from="Bin_Area" to="Bin_Area" method="_on_Bin_Area_body_entered"]
[connection signal="score" from="Bin_Area" to="." method="_on_Bin_Area_score"]
[connection signal="pressed" from="You_Won/Play_Again" to="." method="_on_Play_Again_pressed"]
